syntax = "proto3";

package com.example;

service HelloService {
    rpc sayHello(HelloRequest) returns (HelloResponse);
}

message HelloRequest {
    string clientName = 1;
}

message HelloResponse {
    string message = 1;
}